tests/fixtures/invalid/pow_none_str_bytes.py
# Cannot call pow() with None, Str, Bytes
x = pow(None, "hello", b"hello")
